# TactileGripping_sakata

./: .gitignore  .gitmodules  AGENTS.md  README.md
camera_ws/: main.py  pyproject.toml
camera_ws/bash_scripts/: imaging_remote_setup.sh
camera_ws/src/GraspEveryThing/: README.md
camera_ws/src/GraspEveryThing/software/: config.csv  force_probe.py  get_stream_from_url_fast.py  get_tactile_video.py  train.py
camera_ws/src/GraspEveryThing/videos/: tactile_stream.avi  test.avi
camera_ws/src/clip_cam/: main.py  package.xml  pyproject.toml  setup.cfg  setup.py
camera_ws/src/clip_cam/clip_cam/: __init__.py  single_shot_classifier_node.py  softness_classifier_node.py
camera_ws/src/clip_cam/launch/: realsense_softness.launch.py  single_shot.launch.py  softness_classifier.launch.py
camera_ws/src/clip_cam/scripts/: run_softness_classifier.sh
camera_ws/src/grasp_everything/: package.xml  setup.cfg  setup.py
camera_ws/src/grasp_everything/grasp_everything/: crush_detector_node.py  get_stream_from_url.py  (+3 more)
camera_ws/video/: contact_log.csv
document/: 2025-08-27.md
document/.obsidian/: community-plugins.json  graph.json  hotkeys.json  workspace.json
document/2025/: 2025.md
document/2025/AdvPractice/: AP20250415.md  AP20250508.md  AP20250515.md  AdvPractice.md  TOYOTA.md  TY20250410.md
document/2025/IntPractice/: IP20250416.md  IP20250430.md  IP20250514.md  IP20250611.md  IP20250718.md  IntegrationPractice.md
document/2025/Research/: Research.md
gripper_ws/src/gripper_control/: package.xml  setup.py
gripper_ws/src/gripper_control/gripper_control/: gripper_close_until_contact.py  gripper_commander.py  gripper_control.py  gripper_control_original.py  gripper_force_control.py  gripper_gelsight_control.py  gripper_service_node.py  gripper_utils.py  gripper_utils_node.py  motor_control.py  motor_control_orignal.py  tomato_gripper_control.py
gripper_ws/src/gripper_control/launch/: gripper.launch.py
gripper_ws/src/gripper_control_ros2/: README.md  package.xml  setup.cfg  setup.py
gripper_ws/src/gripper_control_ros2/gripper_control_ros2/: gripper_control_node.py  gripper_serial_selftest.py  gripper_utils.py  motor_control.py  test.py
gripper_ws/src/gripper_control_ros2/launch/: gripper_control.launch.py
(+211 files in other folders)
