[project]
name = "clip-cam"
version = "0.1.0"
description = "OpenCLIPを使って物体の柔らかさ/硬さを判定するROS2ノード"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "open-clip-torch>=3.2.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "numpy<2",
    "pillow>=9.0.0",
    "opencv-python>=4.11.0.86",
]
