<?xml version="1.0"?>
<package format="3">
  <name>gripper_control_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 port of ROS1 gripper control</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <!-- Python package build type -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- Optional but common -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
